// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`default renderer: process output should hook in to stdout/stderr and log everything after even though there is an error: 77ddpC6bJ1Tj5Mz0JNjCqjq9pkwN7Gxh-exit 1`] = `[]`;

exports[`default renderer: process output should hook in to stdout/stderr and log everything after even though there is an error: 77ddpC6bJ1Tj5Mz0JNjCqjq9pkwN7Gxh-stderr 1`] = `[]`;

exports[`default renderer: process output should hook in to stdout/stderr and log everything after even though there is an error: 77ddpC6bJ1Tj5Mz0JNjCqjq9pkwN7Gxh-stdout 1`] = `
[
  "[?25l",
  "[?2026h◼ This task will execute.
[?2026l",
  "[?2026h[2K[1A[2K[G❯ This task will execute.
[?2026l",
  "[?2026h[G[G  › I will push an output. [0][K
[?2026l",
  "[?2026h[1A[G[2K[G  › I will push an output. [1][K
[?2026l",
  "[?2026h[1A[G[2K[G  › I will push an output. [2][K
[?2026l",
  "[?2026h[2K[1A[2K[1A[2K[G✖ This task will execute.
[?2026l",
  "[?2026h[2K[1A[2K[G✖ yattara
[?2026l",
  "[?2026h[2K[1A[2K[G[?2026l",
  "✖ yattara
",
  "
",
  "this should be logged after [0]
",
  "this should be logged after [1]
",
  "this should be logged after [2]
",
  "[?25h",
]
`;

exports[`default renderer: process output should hook in to stdout/stderr and log everything after: qI0M3xvUnGRj5hNg9NhHYq5lezkNGlRK-exit 1`] = `[]`;

exports[`default renderer: process output should hook in to stdout/stderr and log everything after: qI0M3xvUnGRj5hNg9NhHYq5lezkNGlRK-stderr 1`] = `[]`;

exports[`default renderer: process output should hook in to stdout/stderr and log everything after: qI0M3xvUnGRj5hNg9NhHYq5lezkNGlRK-stdout 1`] = `
[
  "[?25l",
  "[?2026h◼ This task will execute.
[?2026l",
  "[?2026h[2K[1A[2K[G❯ This task will execute.
[?2026l",
  "[?2026h[G[G  › I will push an output. [0][K
[?2026l",
  "[?2026h[1A[G[2K[G  › I will push an output. [1][K
[?2026l",
  "[?2026h[1A[G[2K[G  › I will push an output. [2][K
[?2026l",
  "[?2026h[2K[1A[2K[1A[2K[G✔ This task will execute.
[?2026l",
  "[?2026h[2K[1A[2K[G[?2026l",
  "✔ This task will execute.
",
  "
",
  "this should be logged after [0]
",
  "this should be logged after [1]
",
  "this should be logged after [2]
",
  "[?25h",
]
`;
